# UniversityHelper

./: .gitignore  1_🏠_Home.py  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
data/: data.csv  example_data.csv
pages/: 2_📝_Metadata.py  3_📄_PDF_to_Markdown.py  4_🎙️_Audio_Transcription.py  5_🍅_Pomodoro.py  5_📊_Stats.py
src/: 1_🏠_Home.py
src/pages/: 2_📝_Metadata.py  3_📄_PDF_to_Markdown.py  5_📊_Stats.py  6_🤖_Chatbot.py
